--- a/accidents/us_traffic_accidents.ipynb
+++ b/accidents/us_traffic_accidents.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:31:46.143435Z",
-     "start_time": "2025-04-26T07:31:45.805910Z"
+     "end_time": "2025-04-26T15:50:07.034467Z",
+     "start_time": "2025-04-26T15:50:06.706755Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +42,7 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:31:47.172359Z",
-     "start_time": "2025-04-26T07:31:46.357350Z"
+     "end_time": "2025-04-26T15:50:07.495498Z",
+     "start_time": "2025-04-26T15:50:07.048927Z"
     }
    },
    "cell_type": "code",
@@ -78,7 +78,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -89,15 +89,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:31:47.195982Z",
-     "start_time": "2025-04-26T07:31:47.192953Z"
+     "end_time": "2025-04-26T15:50:07.547692Z",
+     "start_time": "2025-04-26T15:50:07.544114Z"
     }
    },
    "cell_type": "code",
    "source": "# path = \"your-local-path\"",
    "id": "f9567287541dbee7",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -108,8 +108,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:31:47.236352Z",
-     "start_time": "2025-04-26T07:31:47.231295Z"
+     "end_time": "2025-04-26T15:50:07.580858Z",
+     "start_time": "2025-04-26T15:50:07.576238Z"
     }
    },
    "cell_type": "code",
@@ -127,7 +127,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -142,8 +142,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:31:51.059010Z",
-     "start_time": "2025-04-26T07:31:47.253828Z"
+     "end_time": "2025-04-26T15:50:20.290096Z",
+     "start_time": "2025-04-26T15:50:07.611663Z"
     }
    },
    "cell_type": "code",
@@ -153,6 +153,8 @@
     "    .appName(\"USTrafficAccidents\") \\\n",
     "    .getOrCreate()\n",
     "\n",
+    "spark.conf.set(\"spark.sql.repl.eagerEval.enabled\", True)\n",
+    "\n",
     "spark"
    ],
    "id": "c89e4c7707f85f79",
@@ -160,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x2566f2a37d0>"
+       "<pyspark.sql.session.SparkSession at 0x2815495c650>"
       ],
       "text/html": [
        "\n",
@@ -170,7 +172,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://host.docker.internal:4042\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://DESKTOP-DIU142O:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -186,12 +188,12 @@
        "        "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -202,8 +204,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:03.853051Z",
-     "start_time": "2025-04-26T07:31:51.070646Z"
+     "end_time": "2025-04-26T15:50:32.930625Z",
+     "start_time": "2025-04-26T15:50:20.326154Z"
     }
    },
    "cell_type": "code",
@@ -233,7 +235,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -248,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:05.066713Z",
-     "start_time": "2025-04-26T07:32:05.060713Z"
+     "end_time": "2025-04-26T15:50:33.160652Z",
+     "start_time": "2025-04-26T15:50:33.152784Z"
     }
    },
    "cell_type": "code",
@@ -311,7 +313,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -322,8 +324,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:12.584954Z",
-     "start_time": "2025-04-26T07:32:05.140231Z"
+     "end_time": "2025-04-26T15:50:39.719551Z",
+     "start_time": "2025-04-26T15:50:34.010395Z"
     }
    },
    "cell_type": "code",
@@ -358,7 +360,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -369,8 +371,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:18.447073Z",
-     "start_time": "2025-04-26T07:32:12.677735Z"
+     "end_time": "2025-04-26T15:50:44.627888Z",
+     "start_time": "2025-04-26T15:50:39.916916Z"
     }
    },
    "cell_type": "code",
@@ -563,18 +565,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:18.880178Z",
-     "start_time": "2025-04-26T07:32:18.505337Z"
+     "end_time": "2025-04-26T15:50:45.182147Z",
+     "start_time": "2025-04-26T15:50:44.833698Z"
     }
    },
    "cell_type": "code",
@@ -587,7 +589,7 @@
        "<Axes: xlabel='Hour', ylabel='count'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -602,7 +604,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -613,8 +615,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:27.568275Z",
-     "start_time": "2025-04-26T07:32:19.029056Z"
+     "end_time": "2025-04-26T15:50:54.414084Z",
+     "start_time": "2025-04-26T15:50:45.436460Z"
     }
    },
    "cell_type": "code",
@@ -746,18 +748,18 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:27.698273Z",
-     "start_time": "2025-04-26T07:32:27.687550Z"
+     "end_time": "2025-04-26T15:50:54.711015Z",
+     "start_time": "2025-04-26T15:50:54.699265Z"
     }
    },
    "cell_type": "code",
@@ -773,13 +775,13 @@
    ],
    "id": "b6dbe1d3f8f77dc9",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T07:32:28.521678Z",
-     "start_time": "2025-04-26T07:32:27.904317Z"
+     "end_time": "2025-04-26T15:50:55.657081Z",
+     "start_time": "2025-04-26T15:50:55.053261Z"
     }
    },
    "cell_type": "code",
@@ -815,7 +817,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {},
