--- a/accidents/sampling.ipynb
+++ b/accidents/sampling.ipynb
@@ -177,16 +177,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-03T01:57:06.801961Z",
-     "start_time": "2025-05-03T01:56:53.792021Z"
+     "end_time": "2025-05-03T02:09:24.267964Z",
+     "start_time": "2025-05-03T02:09:15.633495Z"
     }
    },
    "cell_type": "code",
    "source": [
     "df = spark.read.csv(dataset_path, header=True, inferSchema=True)\n",
     "\n",
-    "# Show the first 5 rows of the DataFrame\n",
-    "df.show(5)"
+    "# Show the first row of the DataFrame\n",
+    "df.show(1, vertical=True)"
    ],
    "id": "691127f19bcc0cdd",
    "outputs": [
@@ -194,21 +194,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+--------+-------------------+-------------------+-----------------+------------------+-------+-------+------------+--------------------+--------------------+------------+----------+-----+----------+-------+----------+------------+-------------------+--------------+-------------+-----------+------------+--------------+--------------+---------------+-----------------+-----------------+-------+-----+--------+--------+--------+-------+-------+----------+-------+-----+---------------+--------------+------------+--------------+--------------+-----------------+---------------------+\n",
-      "| ID| Source|Severity|         Start_Time|           End_Time|        Start_Lat|         Start_Lng|End_Lat|End_Lng|Distance(mi)|         Description|              Street|        City|    County|State|   Zipcode|Country|  Timezone|Airport_Code|  Weather_Timestamp|Temperature(F)|Wind_Chill(F)|Humidity(%)|Pressure(in)|Visibility(mi)|Wind_Direction|Wind_Speed(mph)|Precipitation(in)|Weather_Condition|Amenity| Bump|Crossing|Give_Way|Junction|No_Exit|Railway|Roundabout|Station| Stop|Traffic_Calming|Traffic_Signal|Turning_Loop|Sunrise_Sunset|Civil_Twilight|Nautical_Twilight|Astronomical_Twilight|\n",
-      "+---+-------+--------+-------------------+-------------------+-----------------+------------------+-------+-------+------------+--------------------+--------------------+------------+----------+-----+----------+-------+----------+------------+-------------------+--------------+-------------+-----------+------------+--------------+--------------+---------------+-----------------+-----------------+-------+-----+--------+--------+--------+-------+-------+----------+-------+-----+---------------+--------------+------------+--------------+--------------+-----------------+---------------------+\n",
-      "|A-1|Source2|       3|2016-02-08 05:46:00|2016-02-08 11:00:00|        39.865147|        -84.058723|   NULL|   NULL|        0.01|Right lane blocke...|              I-70 E|      Dayton|Montgomery|   OH|     45424|     US|US/Eastern|        KFFO|2016-02-08 05:58:00|          36.9|         NULL|       91.0|       29.68|          10.0|          Calm|           NULL|             0.02|       Light Rain|  false|false|   false|   false|   false|  false|  false|     false|  false|false|          false|         false|       false|         Night|         Night|            Night|                Night|\n",
-      "|A-2|Source2|       2|2016-02-08 06:07:59|2016-02-08 06:37:59|39.92805900000001|        -82.831184|   NULL|   NULL|        0.01|Accident on Brice...|            Brice Rd|Reynoldsburg|  Franklin|   OH|43068-3402|     US|US/Eastern|        KCMH|2016-02-08 05:51:00|          37.9|         NULL|      100.0|       29.65|          10.0|          Calm|           NULL|              0.0|       Light Rain|  false|false|   false|   false|   false|  false|  false|     false|  false|false|          false|         false|       false|         Night|         Night|            Night|                  Day|\n",
-      "|A-3|Source2|       2|2016-02-08 06:49:27|2016-02-08 07:19:27|        39.063148|        -84.032608|   NULL|   NULL|        0.01|Accident on OH-32...|      State Route 32|Williamsburg|  Clermont|   OH|     45176|     US|US/Eastern|        KI69|2016-02-08 06:56:00|          36.0|         33.3|      100.0|       29.67|          10.0|            SW|            3.5|             NULL|         Overcast|  false|false|   false|   false|   false|  false|  false|     false|  false|false|          false|          true|       false|         Night|         Night|              Day|                  Day|\n",
-      "|A-4|Source2|       3|2016-02-08 07:23:34|2016-02-08 07:53:34|        39.747753|-84.20558199999998|   NULL|   NULL|        0.01|Accident on I-75 ...|              I-75 S|      Dayton|Montgomery|   OH|     45417|     US|US/Eastern|        KDAY|2016-02-08 07:38:00|          35.1|         31.0|       96.0|       29.64|           9.0|            SW|            4.6|             NULL|    Mostly Cloudy|  false|false|   false|   false|   false|  false|  false|     false|  false|false|          false|         false|       false|         Night|           Day|              Day|                  Day|\n",
-      "|A-5|Source2|       2|2016-02-08 07:39:07|2016-02-08 08:09:07|        39.627781|        -84.188354|   NULL|   NULL|        0.01|Accident on McEwe...|Miamisburg Center...|      Dayton|Montgomery|   OH|     45459|     US|US/Eastern|        KMGY|2016-02-08 07:53:00|          36.0|         33.3|       89.0|       29.65|           6.0|            SW|            3.5|             NULL|    Mostly Cloudy|  false|false|   false|   false|   false|  false|  false|     false|  false|false|          false|          true|       false|           Day|           Day|              Day|                  Day|\n",
-      "+---+-------+--------+-------------------+-------------------+-----------------+------------------+-------+-------+------------+--------------------+--------------------+------------+----------+-----+----------+-------+----------+------------+-------------------+--------------+-------------+-----------+------------+--------------+--------------+---------------+-----------------+-----------------+-------+-----+--------+--------+--------+-------+-------+----------+-------+-----+---------------+--------------+------------+--------------+--------------+-----------------+---------------------+\n",
-      "only showing top 5 rows\n",
+      "-RECORD 0-------------------------------------\n",
+      " ID                    | A-1                  \n",
+      " Source                | Source2              \n",
+      " Severity              | 3                    \n",
+      " Start_Time            | 2016-02-08 05:46:00  \n",
+      " End_Time              | 2016-02-08 11:00:00  \n",
+      " Start_Lat             | 39.865147            \n",
+      " Start_Lng             | -84.058723           \n",
+      " End_Lat               | NULL                 \n",
+      " End_Lng               | NULL                 \n",
+      " Distance(mi)          | 0.01                 \n",
+      " Description           | Right lane blocke... \n",
+      " Street                | I-70 E               \n",
+      " City                  | Dayton               \n",
+      " County                | Montgomery           \n",
+      " State                 | OH                   \n",
+      " Zipcode               | 45424                \n",
+      " Country               | US                   \n",
+      " Timezone              | US/Eastern           \n",
+      " Airport_Code          | KFFO                 \n",
+      " Weather_Timestamp     | 2016-02-08 05:58:00  \n",
+      " Temperature(F)        | 36.9                 \n",
+      " Wind_Chill(F)         | NULL                 \n",
+      " Humidity(%)           | 91.0                 \n",
+      " Pressure(in)          | 29.68                \n",
+      " Visibility(mi)        | 10.0                 \n",
+      " Wind_Direction        | Calm                 \n",
+      " Wind_Speed(mph)       | NULL                 \n",
+      " Precipitation(in)     | 0.02                 \n",
+      " Weather_Condition     | Light Rain           \n",
+      " Amenity               | false                \n",
+      " Bump                  | false                \n",
+      " Crossing              | false                \n",
+      " Give_Way              | false                \n",
+      " Junction              | false                \n",
+      " No_Exit               | false                \n",
+      " Railway               | false                \n",
+      " Roundabout            | false                \n",
+      " Station               | false                \n",
+      " Stop                  | false                \n",
+      " Traffic_Calming       | false                \n",
+      " Traffic_Signal        | false                \n",
+      " Turning_Loop          | false                \n",
+      " Sunrise_Sunset        | Night                \n",
+      " Civil_Twilight        | Night                \n",
+      " Nautical_Twilight     | Night                \n",
+      " Astronomical_Twilight | Night                \n",
+      "only showing top 1 row\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "metadata": {},
