WIP: ML notebook

--- a/accidents/Actividad3_Matrícula#A01795197.ipynb
+++ b/accidents/Actividad3_Matrícula#A01795197.ipynb
@@ -23,7 +23,9 @@
    "source": [
     "import kagglehub\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import when, col, hour, date_format, count, round, concat_ws"
+    "from pyspark.sql.functions import when, col, hour, date_format, count, round, concat_ws, rand\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import row_number"
    ],
    "id": "edc18bba85d21f9b",
    "outputs": [
@@ -182,6 +184,16 @@
    "id": "2c6c9672d0adf48a"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "A continuación aplicamos nuestro muestreo del conjunto de datos, tal como se describió en la actividad anterior.\n",
+    "\n",
+    "El primer paso consiste en crear las columnas Weather_Condition, Hora_Periodo y Tipo_Día. "
+   ],
+   "id": "15c00f4c26cd8979"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-24T19:27:16.567360Z",
@@ -196,7 +208,19 @@
     "    .when(col(\"Weather_Condition\").rlike(\"(?i)Rain|Drizzle|Thunder|Storm|Snow|Sleet|Hail|Ice|Fog|Haze|Mist|Dust|Sand|Smoke|Wintry|Squall|Tornado|Ash|Funnel\"), \"Adverso\")\n",
     "    .otherwise(\"Favorable\")\n",
     ")\n",
-    "df.groupBy(\"Weather_Type\").count().withColumn(\"porcentaje\", col(\"count\") / df.count() * 100).show()"
+    "\n",
+    "df = df.withColumn(\n",
+    "    \"Hora_Periodo\",\n",
+    "    when(hour(\"Start_Time\") < 6, \"Madrugada\")\n",
+    "    .when(hour(\"Start_Time\") < 18, \"Alta actividad\")\n",
+    "    .otherwise(\"Tarde-Noche\")\n",
+    ")\n",
+    "\n",
+    "df = df.withColumn(\"Dia_Semana\", date_format(\"Start_Time\", \"E\"))\n",
+    "df = df.withColumn(\n",
+    "    \"Tipo_Día\",\n",
+    "    when(col(\"Dia_Semana\").isin(\"Sat\", \"Sun\"), \"Fin de semana\").otherwise(\"Laboral\")\n",
+    ")"
    ],
    "id": "25b471117dac9b97",
    "outputs": [
@@ -218,91 +242,31 @@
    "execution_count": 5
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-24T19:27:22.939704Z",
-     "start_time": "2025-05-24T19:27:17.807064Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "df = df.withColumn(\n",
-    "    \"Hora_Periodo\",\n",
-    "    when(hour(\"Start_Time\") < 6, \"Madrugada\")\n",
-    "    .when(hour(\"Start_Time\") < 18, \"Alta actividad\")\n",
-    "    .otherwise(\"Tarde-Noche\")\n",
-    ")\n",
-    "\n",
-    "df.groupBy(\"Hora_Periodo\").count().withColumn(\"porcentaje\", col(\"count\") / df.count() * 100).show()"
-   ],
-   "id": "9c0d5f7090fbf514",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------+-------+------------------+\n",
-      "|  Hora_Periodo|  count|        porcentaje|\n",
-      "+--------------+-------+------------------+\n",
-      "|   Tarde-Noche|1438025|18.607035303841908|\n",
-      "|Alta actividad|5515796| 71.37053312758123|\n",
-      "|     Madrugada| 774573| 10.02243156857686|\n",
-      "+--------------+-------+------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Posteriormente, filtramos cualquier registro en el cual las columnas clave (Severity, Hora_Periodo, Tipo_Día y Weather_Type) son nulas.",
+   "id": "adc893d9093466f8"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-24T19:27:23.181233Z",
-     "start_time": "2025-05-24T19:27:23.150001Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# Paso 1: Extraer el día de la semana en formato abreviado (Mon, Tue, ..., Sun)\n",
-    "df = df.withColumn(\"Dia_Semana\", date_format(\"Start_Time\", \"E\"))\n",
-    "\n",
-    "# Paso 2: Clasificar como \"Laboral\" o \"Fin de semana\"\n",
-    "df = df.withColumn(\n",
-    "    \"Tipo_Día\",\n",
-    "    when(col(\"Dia_Semana\").isin(\"Sat\", \"Sun\"), \"Fin de semana\").otherwise(\"Laboral\")\n",
-    ")\n",
-    "\n",
-    "# # Paso 3: Calcular distribución porcentual\n",
-    "# df.groupBy(\"Tipo_Día\") \\\n",
-    "#   .count() \\\n",
-    "#   .withColumn(\"porcentaje\", col(\"count\") / df.count() * 100) \\\n",
-    "#   .show()"
-   ],
-   "id": "4275356e13ff757b",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null,
+   "source": [
+    "df_filtrado = df.filter(\n",
+    "    (col(\"Severity\").isNotNull()) &\n",
+    "    (col(\"Hora_Periodo\").isNotNull()) &\n",
+    "    (col(\"Tipo_Día\").isNotNull()) &\n",
+    "    (col(\"Weather_Type\").isNotNull())\n",
+    ")"
+   ],
+   "id": "89c56a72d6519948"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-24T19:27:23.416500Z",
-     "start_time": "2025-05-24T19:27:23.412362Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# # Revisar ocurrencia de variables booleanas\n",
-    "# variables_viales = [\"Junction\", \"Crossing\", \"Traffic_Signal\", \"Amenity\", \"Bump\", \"Give_Way\", \"No_Exit\", \"Railway\", \"Roundabout\", \"Station\", \"Stop\", \"Traffic_Calming\", \"Turning_Loop\"]\n",
-    "#\n",
-    "# for var in variables_viales:\n",
-    "#     df.groupBy(var) \\\n",
-    "#       .count() \\\n",
-    "#       .withColumn(\"porcentaje\", col(\"count\") / df.count() * 100) \\\n",
-    "#       .show()"
-   ],
-   "id": "a9fe286165ac2641",
-   "outputs": [],
-   "execution_count": 8
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Ahora obtenemos los estratos a partir de las diferentes combinaciones de estas variables, al igual que la probabilidad para cada estrato.",
+   "id": "31c3ea2c24674a2"
   },
   {
    "metadata": {
@@ -313,17 +277,8 @@
    },
    "cell_type": "code",
    "source": [
-    "df_filtrado = df.filter(\n",
-    "    (col(\"Severity\").isNotNull()) &\n",
-    "    (col(\"Hora_Periodo\").isNotNull()) &\n",
-    "    (col(\"Tipo_Día\").isNotNull()) &\n",
-    "    (col(\"Weather_Type\").isNotNull())\n",
-    ")\n",
-    "\n",
-    "# Paso 2: Contar el total de registros filtrados\n",
     "total_registros = df_filtrado.count()\n",
     "\n",
-    "# Paso 3: Agrupar por combinación de estratos y calcular frecuencia y probabilidad empírica\n",
     "estratos = df_filtrado.groupBy(\"Severity\", \"Hora_Periodo\", \"Tipo_Día\", \"Weather_Type\") \\\n",
     "    .agg(count(\"*\").alias(\"frecuencia\")) \\\n",
     "    .withColumn(\"probabilidad\", round(col(\"frecuencia\") / total_registros, 6)) \\\n",
@@ -332,6 +287,12 @@
    "id": "63226ed1513c5c58",
    "outputs": [],
    "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Para cada estrato, calculamos el número de elementos a incluir a partir del tamaño de la muestra deseado y la probabilidad para cada estrato.",
+   "id": "966a61c18b6811a3"
   },
   {
    "metadata": {
@@ -343,17 +304,22 @@
    "cell_type": "code",
    "source": [
     "# Tamaño total de muestra deseado\n",
-    "tamanio_muestra_total = 10000\n",
+    "n_muestra = 30000\n",
     "\n",
-    "# Calcular n_estrato para cada combinación\n",
     "estratos = estratos.withColumn(\n",
     "    \"n_estrato\",\n",
-    "    round(col(\"probabilidad\") * tamanio_muestra_total).cast(\"integer\")\n",
+    "    round(col(\"probabilidad\") * n_muestra).cast(\"integer\")\n",
     ")"
    ],
    "id": "65a11235caea4c32",
    "outputs": [],
    "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Unimos los dataframes con la información de los estratos con nuestro dataset.",
+   "id": "ada93795339eb0cf"
   },
   {
    "metadata": {
@@ -374,6 +340,12 @@
     "estratos = estratos.withColumn(\n",
     "    \"estrato_id\",\n",
     "    concat_ws(\"_\", \"Severity\", \"Hora_Periodo\", \"Tipo_Día\", \"Weather_Type\")\n",
+    ")\n",
+    "\n",
+    "df_muestreo = df_filtrado.join(\n",
+    "    estratos.select(\"estrato_id\", \"n_estrato\"),\n",
+    "    on=\"estrato_id\",\n",
+    "    how=\"inner\"\n",
     ")"
    ],
    "id": "7d702c4e789b6bf7",
@@ -381,23 +353,10 @@
    "execution_count": 11
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-24T19:27:46.543991Z",
-     "start_time": "2025-05-24T19:27:46.497665Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "df_muestreo = df_filtrado.join(\n",
-    "    estratos.select(\"estrato_id\", \"n_estrato\"),\n",
-    "    on=\"estrato_id\",\n",
-    "    how=\"inner\"\n",
-    ")"
-   ],
-   "id": "d94aded91c262920",
-   "outputs": [],
-   "execution_count": 12
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Ordenamos de forma aleatoria los elementos dentro de cada estrato.",
+   "id": "f131594b21a9e1bb"
   },
   {
    "metadata": {
@@ -408,10 +367,6 @@
    },
    "cell_type": "code",
    "source": [
-    "from pyspark.sql.functions import rand\n",
-    "from pyspark.sql.window import Window\n",
-    "from pyspark.sql.functions import row_number\n",
-    "\n",
     "# Asignar un número aleatorio y calcular el orden por estrato\n",
     "df_muestreo = df_muestreo.withColumn(\"rand\", rand(seed=42))\n",
     "\n",
@@ -422,6 +377,12 @@
    "id": "d2bfb0724eecb860",
    "outputs": [],
    "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Finalmente, creamos nuestro data frame con la muestra a utilizar, incluyendo sólamente el número de elementos correspondiente a cada estrato.",
+   "id": "bfb583fa67fa281c"
   },
   {
    "metadata": {
