Remove outliers for minutes

--- a/accidents/Actividad3_Matrícula#A01795197.ipynb
+++ b/accidents/Actividad3_Matrícula#A01795197.ipynb
@@ -787,8 +787,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:54:35.211991Z",
-     "start_time": "2025-05-26T04:54:33.134744Z"
+     "end_time": "2025-05-26T05:26:39.289326Z",
+     "start_time": "2025-05-26T05:26:37.082046Z"
     }
    },
    "cell_type": "code",
@@ -806,24 +806,24 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 49
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Ahora procedemos a transformar y preparar nuestro conjunto de datos para entrenamiento. El primer paso es aplicar escalamiento a nuestras variables numéricas.",
+   "source": "Ahora procedemos a transformar y preparar nuestro conjunto de datos para entrenamiento. El primer paso es aplicar escalamiento a nuestras variables numéricas. Para este caso, sólo nos enfocaremos en la visibilidad y distancia.",
    "id": "4283fa5ae12fbdf0"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:55:28.153946Z",
-     "start_time": "2025-05-26T04:55:26.706181Z"
+     "end_time": "2025-05-26T05:27:34.779239Z",
+     "start_time": "2025-05-26T05:27:33.436241Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "cols_to_scale = ['Distance(mi)', 'Temperature(F)', 'Humidity(%)', 'Pressure(in)', 'Visibility(mi)']\n",
+    "cols_to_scale = ['Distance(mi)', 'Visibility(mi)']\n",
     "\n",
     "vectorizer = VectorAssembler(inputCols=cols_to_scale, outputCol=\"numerical_features\")\n",
     "train_data = vectorizer.transform(train_data)\n",
@@ -836,7 +836,47 @@
    ],
    "id": "d2b3bb74c1a440be",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 50
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "También removeremos outliers de nuestra variable objetivo. Utilizamos la técnica IQR para esto, calculando los a partir del dataset de entrenamiento.",
+   "id": "5fcfc93b502e0d0a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-26T05:41:15.299841Z",
+     "start_time": "2025-05-26T05:41:14.127512Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from pyspark.sql.functions import percentile_approx\n",
+    "\n",
+    "# Calculate Q1 and Q3\n",
+    "quantiles = train_data.select(\n",
+    "    percentile_approx('Minutes', [0.25, 0.75], 10000).alias('quantiles')\n",
+    ").collect()[0]['quantiles']\n",
+    "\n",
+    "Q1 = quantiles[0]\n",
+    "Q3 = quantiles[1]\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "# Filter out outliers\n",
+    "train_data = train_data.filter(\n",
+    "    (col('Minutes') >= Q1 - 1.5 * IQR) &\n",
+    "    (col('Minutes') <= Q3 + 1.5 * IQR)\n",
+    ")\n",
+    "test_data = test_data.filter(\n",
+    "    (col('Minutes') >= Q1 - 1.5 * IQR) &\n",
+    "    (col('Minutes') <= Q3 + 1.5 * IQR)\n",
+    ")"
+   ],
+   "id": "5f5321da9fb92aeb",
+   "outputs": [],
+   "execution_count": 58
   },
   {
    "metadata": {},
@@ -853,32 +893,26 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Para este ejemplo, se creará un modelo de regresión lineal que pueda predecir la duración del impacto de un accidente dadas sus características. El primer paso es preparar nuestro vector de características. Para esto vamos a crear un vector con las variables categóricas previamente codificadas (omitimos Weather_Condition ya que Weather_Type deriva de esta), las variables booleanas del dataset y las variables escaladas en el paso anterior.",
+   "source": "Para este ejemplo, se creará un modelo de regresión lineal que pueda predecir la duración del impacto de un accidente dadas sus características. El primer paso es preparar nuestro vector de características. En este caso, se utilizará Weather_Type, Hora_Periodo, Tipo_Día, Severity y Distancia y Visibilidad. Lo que buscamos es medir el impacto de un accidente según las condiciones en las que sucedió. Debemos usar las columnas previamente procesadas.",
    "id": "7a1d2ad50bc39576"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:56:19.557452Z",
-     "start_time": "2025-05-26T04:56:19.487622Z"
+     "end_time": "2025-05-26T05:29:50.774397Z",
+     "start_time": "2025-05-26T05:29:50.719668Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Las columnas transformadas\n",
-    "encoded_categorical_cols = [f\"{c}_vector\" for c in categorical_columns if c != 'Weather_Condition']\n",
-    "\n",
-    "# Estas columnas booleanas no requieren transformaciones adicionales\n",
-    "boolean_cols = ['Amenity', 'Bump', 'Crossing', 'Give_Way', 'Junction', 'No_Exit', 'Railway', 'Roundabout', 'Station', 'Stop', 'Traffic_Calming', 'Traffic_Signal', 'Turning_Loop']\n",
-    "\n",
-    "cols_to_vectorize = encoded_categorical_cols + boolean_cols + ['Severity'] + ['scaled_features']\n",
+    "cols_to_vectorize = ['Weather_Type_vector', 'Tipo_Día_vector', 'Hora_Periodo_vector', 'Severity', 'scaled_features']\n",
     "vectorizer = VectorAssembler(inputCols=cols_to_vectorize, outputCol=\"lr_features\")\n",
     "train_data = vectorizer.transform(train_data)\n",
     "test_data = vectorizer.transform(test_data)"
    ],
    "id": "869dc2b5ffcb8525",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -889,8 +923,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:57:17.691474Z",
-     "start_time": "2025-05-26T04:57:14.117277Z"
+     "end_time": "2025-05-26T05:42:23.637632Z",
+     "start_time": "2025-05-26T05:42:20.828808Z"
     }
    },
    "cell_type": "code",
@@ -900,7 +934,7 @@
    ],
    "id": "380763b012f8e00d",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 59
   },
   {
    "metadata": {},
@@ -911,8 +945,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:58:06.704396Z",
-     "start_time": "2025-05-26T04:58:06.665618Z"
+     "end_time": "2025-05-26T05:43:30.013818Z",
+     "start_time": "2025-05-26T05:43:30.006058Z"
     }
    },
    "cell_type": "code",
@@ -926,12 +960,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The coefficient of the model is :  [359.9508140921732,-357.8850463314868,-1826.4024083578602,0.0,1181.0040207417903,-327.4700407037678,-262.1194865869057,-357.5247996746232,-395.1462162074037,-729.4861676479812,1140.2394468870393,0.0,-134.95438253744575,134.9543825375766,0.0,-313.1074124011783,30.806515795032972,659.4248267582012,0.0,-195.24985408746346,1310.3958071769816,-172.31701254688062,-358.04278340426754,-555.1462244134245,-77.81140541688518,27.1761877643569,0.0,-113.81327625537868,-359.01490342523675,-827.6171247184991,-334.55919761424366,0.0,258.06086298688706,59.77275087624374,-85.92802055371689,353.91171818338375,-376.2847852648156,182.76190937954104]\n",
-      "The Intercept of the model is :  10329.948903784862\n"
+      "The coefficient of the model is :  [-1.8451326890128377,1.4556126350128107,69.24505988262186,0.0,-4.943759528838038,4.943759528837734,0.0,-5.882001292463004,0.0,7.097347617721259,0.0,-17.9269392886558,7.21616583207795,0.0]\n",
+      "The Intercept of the model is :  121.22484016212401\n"
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -942,8 +976,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T04:58:59.081257Z",
-     "start_time": "2025-05-26T04:58:54.840657Z"
+     "end_time": "2025-05-26T05:44:43.007768Z",
+     "start_time": "2025-05-26T05:44:37.995366Z"
     }
    },
    "cell_type": "code",
@@ -973,19 +1007,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 20896.345\n",
-      "MSE: 436657223.363\n",
-      "MAE: 1631.918\n",
-      "r2: -0.002\n"
+      "RMSE: 48.611\n",
+      "MSE: 2363.005\n",
+      "MAE: 37.886\n",
+      "r2: 0.078\n"
      ]
     }
    ],
-   "execution_count": 42
+   "execution_count": 61
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "En este caso, la columna objetivo representa minutos y no fue escalada, por lo que las métricas RMSE y MAE representan minutos también. Por su parte, r2 es un coeficiente, con valores cercanos a 1 indicando un mejor rendimiento para nuestro modelo. MSE representa minutos cuadrados, por lo que para este análisis no nos será de tanta utilidad, sobre todo porque ya contamos con la métrica de RMSE.",
+   "source": [
+    "En este caso, la columna objetivo representa minutos y no fue escalada, por lo que las métricas RMSE y MAE representan minutos también. Por su parte, r2 es un coeficiente, con valores cercanos a 1 indicando un mejor rendimiento para nuestro modelo. MSE representa minutos cuadrados, por lo que para este análisis no nos será de tanta utilidad, sobre todo porque ya contamos con la métrica de RMSE.\n",
+    "\n",
+    "Podemos ver que en este caso, las predicciones de nuestro modelo suelen errar por un margen de aproximadamente 35 a 50 minutos, basándonos en las métricas de RMSE y MAE. Si bien esto no es perfecto, coincide con la experiencia personal, ya que los accidentes suelen generar tráfico impredecible y duradero.\n",
+    "\n",
+    "Sin embargo, también vemos un valor bajo para r2, indicando que nuestras variables de entrada no explican la varianza en la variable de salida. Esto puede indicar que nuestro modelo se beneficiaría de la apliación de ingeniería de características, de forma que nuestra entrada capture mejor las características de la variable objetivo."
+   ],
    "id": "997a6e38e0f2ce99"
   },
   {
